# Blender_GraphQL_MCP

./: CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  STRUCTURE.md  __init__.py  blender_manifest.toml  config.py  easy_install.bat  easy_install.py  easy_install.sh  extension.toml  key_files_summary.txt  mcp_server.py  pyproject.toml  requirements.txt
addons_bridge/: __init__.py  adapter.py
blender_mcp/: __init__.py
commands/: __init__.py  blender_commands.py
core/: __init__.py  api.py  api_definition.py  api_handlers.py  api_mode_utils.py  api_routes.py  auth.py  batch_processor.py  blender_context.py  blender_mcp.py  blender_version_utils.py  client.py  command_executor.py  command_handler.py  command_templates.py  commands.py  enhanced_integration.py  errors.py  extensions_manager.py  fastapi_server.py  helpers.py  high_level_commands.py  http_server.py  http_server.py.bak  http_server.py.fixed  http_server.py.new  json_api.py  json_api_advanced.py  json_api_routes.py  json_handlers.py  mcp_command_processor.py  mcp_tools.py  mesh_operations.py  meta_commands.py  meta_commands_secure.py  models.py  new_dependency_manager.py  numpy_optimizers.py  object_commands.py  pandas_optimizers.py  (+11 more)
graphql/: __init__.py  api.py  error_handler.py  graphiql.py  hole_penetration.py  resolver.py  resolver_compatibility.py  resolvers.py  resolvers_alias.py  schema.py
operators/: __init__.py  execute_script.py  execute_script_secure.py
plugins/: __init__.py  sample_plugin.py
preferences/: __init__.py
scripts/: install_blender_addon.ps1  install_blender_addon.sh  (+2 more)
(+152 files in other folders)
