[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blender_graphql_mcp"
version = "1.0.0"
description = "Blender GraphQL MCP - GraphQL APIとModel Context Protocolを使用したBlender操作"
readme = "README.md"
authors = [
    {name = "Blender GraphQL MCP Team"}
]
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
requires-python = ">=3.7"

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "pydantic>=1.10.7",
    "graphql-core>=3.2.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/blender_graphql_mcp"
"Bug Tracker" = "https://github.com/yourusername/blender_graphql_mcp/issues"

[tool.setuptools]
packages = ["blender_graphql_mcp"]